# inky_uk_energy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  energy_data_image.py  logger.py
src/data/: energy_data_client.py  models.py
src/server/: image_server.py
src/services/: energy_data_composer.py
src/templates/: impression_template.html  phat_template.html
src/templates/styles/: base.css
src/utils/: env_loader.py  screenshot_capture.py
