[tool.poetry]
name = "inky-uk-energy"
version = "1.0.0"
description = ""
authors = ["Robert <robert@rrayns.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.1.0"
requests = "^2.32.3"
pytz = "^2024.2"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
