[tool.poetry]
name = "inky-uk-energy"
version = "2.0.0"
description = ""
authors = ["Robert <robert@rrayns.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pytz = "^2024.2"
schedule = "^1.2.2"
jinja2 = "^3.1.6"
playwright = "^1.51.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
